@@ -16,5 +16,4 @@ icub_app_install(${appname}
 				FILES ${conf}
 				DESTINATION conf)
 
-icub_add_target(${appname})
 
