@@ -6,9 +6,6 @@ file(GLOB conf ${CMAKE_CURRENT_SOURCE_DIR}/conf/*.ini)
 
 icub_app_install(${appname} 
 				FILES ${conf}
-				DESTINATION conf)			
+				DESTINATION conf)		
+
 				
-icub_add_target(${appname})
-
-
-
