@@ -7,7 +7,7 @@
 
 # Better export library function. Export a target to be used from external programs
 #
-# icub_export_library2(target 
+# icub_export_library(target 
 #                       [INTERNAL_INCLUDE_DIRS dir1 dir2 ...] 
 #                       [EXTERNAL_INCLUDE_DIRS dir1 dir2 ...]
 #                       [DEPENDS target1 target2 ...]
@@ -189,15 +189,22 @@ MACRO(PARSE_ARGUMENTS prefix arg_names option_names)
 ENDMACRO(PARSE_ARGUMENTS)
 
 
+##
+# Declare a new application rule.
+#
+# icub_app(target)
+# - target: target name this name, prefixed with app will be the target for
+# make or the vs gui.
 macro(icub_app target)
     set(dummy ${CMAKE_BINARY_DIR}/f-${target})
-    set(dapp ${ICUB_DESTINATION_APP}/app/${target})
-	
+	file(TO_CMAKE_PATH "${ICUB_APPLICATIONS_PREFIX}" app_prefix)
+ 	
 	set(cmakefile ${CMAKE_BINARY_DIR}/app-${target}.cmake)
 	file(WRITE ${cmakefile} "###### This file is automatically generated by CMake.\n")
 	file(APPEND ${cmakefile} "## see macro icub_app defined in conf/iCubHelpers.cmake\n\n")
-	
-	file(APPEND ${cmakefile} "execute_process(COMMAND \"\${CMAKE_COMMAND}\" -E make_directory ${dapp})\n")
+
+	file(APPEND ${cmakefile} "execute_process(COMMAND \"\${CMAKE_COMMAND}\" -E make_directory ${app_prefix})\n")
+	file(APPEND ${cmakefile} "execute_process(COMMAND \"\${CMAKE_COMMAND}\" -E make_directory ${app_prefix}/app)\n")
 	
     add_custom_target(app-${target} DEPENDS ${dummy})
     
@@ -213,14 +220,26 @@ macro(icub_app target)
 #                    COMMENT "Creating directory ${target}")
 endmacro(icub_app)
 
-##
-# Add rule to copy a list of files.
-# FILES need to be a list of files, for ease of usage we skip directories.
+# Add install rule for applications.
+#
+# icub_app_install(target 
+#                  [DESTINATION dest]
+#                  [VERBOSE]
+#                  [ROOT]
+#                  [FILES file1 file2 ...])
+# - target: name of the command, previously defined with the icub_app command
+# - DESTINATION: destination directory for files
+# - VERBOSE: print verbose
+# - ROOT: whether to use app/${target} as prefix or not
+# - FILES: files to be copied
+#
+# By default FILES will be copied to ${ICUB_INSTALL_PREFIX}/app/${target}/DESTINATION
+# if you specify ROOT, files will be copied to ${ICUB_INSTALL_PREFIX}.
 #
 macro(icub_app_install target)
   PARSE_ARGUMENTS(${target}
-    "FILES;DESTINATION"
-    "VERBOSE"
+	"FILES;DESTINATION"
+    "VERBOSE;ROOT"
     ${ARGN}
     )
     
@@ -232,24 +251,35 @@ macro(icub_app_install target)
     MESSAGE(STATUS "Files: ${${target}_FILES}")
     MESSAGE(STATUS "Destination: ${${target}_DESTINATION}")
     MESSAGE(STATUS "Option verbosity: ${${target}_VERBOSE}")
+	MESSAGE(STATUS "Option root: ${${target}_ROOT}")
   endif(VERBOSE)
   
   set(files ${${target}_FILES})
   set(destination ${${target}_DESTINATION})
-  
+  set(root ${${target}_ROOT})
+
   set(cmakefile ${CMAKE_BINARY_DIR}/app-${target}.cmake)
   
-  if (destination)
-	set(dapp "${ICUB_DESTINATION_APP}/app/${target}/${destination}")
-	file(APPEND ${cmakefile} "execute_process(COMMAND \"\${CMAKE_COMMAND}\" -E make_directory ${dapp})\n")
+  if (root)
+	file(TO_CMAKE_PATH "${ICUB_APPLICATIONS_PREFIX}" dapp)
+  else(root)
+	file(TO_CMAKE_PATH "${ICUB_APPLICATIONS_PREFIX}/app/${target}" dapp)
+  endif(root)
 
- #     add_custom_command(OUTPUT ${dummy}
- #       COMMAND ${CMAKE_COMMAND} -E make_directory ${dapp}
- #       COMMENT "Creating directory ${dapp}"
- #       APPEND)
-  else (destination)
-      set(dapp "${ICUB_DESTINATION_APP}/app/${target}")
-  endif(destination)
+  if (destination)
+		set(dapp ${dapp}/${destination})
+		
+
+		#     add_custom_command(OUTPUT ${dummy}
+		#       COMMAND ${CMAKE_COMMAND} -E make_directory ${dapp}
+		#       COMMENT "Creating directory ${dapp}"
+		#       APPEND)
+		#file(APPEND ${cmakefile} "execute_process(COMMAND \"\${CMAKE_COMMAND}\" -E make_directory ${dapp})\n")
+		
+  endif (destination)
+
+  file(APPEND ${cmakefile} "execute_process(COMMAND \"\${CMAKE_COMMAND}\" -E make_directory ${dapp})\n")
+
   
   #message(STATUS "${CMAKE_COMMAND} -E make_directory ${dapp}/${destination}")
 
@@ -286,6 +316,17 @@ endmacro(icub_app_install)
 macro(icub_add_target target)
 ## obsolete...
 endmacro(icub_add_target)
+
+## gather all applications from global list ICUB_APPLICATIONS
+# declare a target called install_applications which depends 
+# on all the previously defined applications.
+macro(icub_app_all)
+    ## add custom targets
+    icub_get_property(applications GLOBAL PROPERTY ICUB_APPLICATIONS)
+    message(STATUS "Exporting applications: ${applications}")
+    add_custom_target(install_applications)
+    add_dependencies(install_applications ${applications})
+endmacro(icub_declare_applications)
 
 ### From yarp.
 # Helper macro to work around a bug in set_property in cmake 2.6.0
